PRL-4983: fixed ordering issue for applicant solicitors